# sliderule

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  CITATION.md  CLAUDE.md  CMakeLists.txt  Makefile  NOTICE  PR_DESCRIPTION.md  README.md  RELEASE.sh  docker-compose.yml  new_valgrind_output.txt  project-config.cmake  sliderule-openapi-complete.yaml  version.txt
applications/server/: CMakeLists.txt  SlideRule.cpp
datasets/atlas/: CMakeLists.txt
datasets/bathy/: CMakeLists.txt  README.md
datasets/bluetopo/: CMakeLists.txt  bluetopo.md
datasets/casals/: CMakeLists.txt  README.md
datasets/gebco/: CMakeLists.txt  gebco.md
datasets/gedi/: CMakeLists.txt
datasets/gedtm/: CMakeLists.txt  gedtm.md
datasets/icesat2/: CMakeLists.txt  README.md
datasets/landsat/: CMakeLists.txt  landsat.md
datasets/nisar/: CMakeLists.txt  nisar.md
datasets/opendata/: CMakeLists.txt  opendata.md
datasets/pgc/: CMakeLists.txt  pgc.md
datasets/swot/: CMakeLists.txt  README.md
datasets/usgs3dep/: CMakeLists.txt  usgs3dep.md
plugins/arcticdem/: CMakeLists.txt  arcticdem.md
plugins/atlas/: .gitignore  AltimetryHistogram.cpp  AltimetryProcessorModule.cpp  AtlasFileWriter.h  AtlasHistogram.h  CMakeLists.txt  CmdEchoProcessorModule.h  DiagLogProcessorModule.cpp  HstvsSimulator.cpp  HstvsSimulator.h  ItosRecordParser.cpp  ItosRecordParser.h  LaserProcessorModule.h  README.md  TimeProcessorModule.cpp  TimeTagHistogram.cpp  TimeTagHistogram.h  TimeTagProcessorModule.cpp  atlas.cpp  atlas.h  atlas.md  atlasdefines.h
plugins/gedi/: CMakeLists.txt  README.md
plugins/h5/: CMakeLists.txt  H5Array.h  H5DatasetDevice.h  H5File.cpp  H5File.h  H5IO.cpp  h5.cpp  h5.h  h5.md
plugins/icesat2/: .gitignore  Atl03Device.cpp  Atl03Device.h  Atl03Indexer.cpp  Atl03Indexer.h  Atl03Reader.cpp  Atl03Reader.h  Atl06Dispatch.cpp  Atl06Dispatch.h  CMakeLists.txt  GTArray.h  H5Array.h  Hdf5Atl03Device.cpp  Hdf5Atl03Device.h  Hdf5Atl03Handle.cpp  Hdf5Atl03Handle.h  Hdf5Atl06Handle.cpp  Hdf5Atl06Handle.h  Hdf5DatasetDevice.cpp  Hdf5DatasetDevice.h  Hdf5DatasetHandle.cpp  Hdf5DatasetHandle.h  Hdf5File.cpp  Hdf5File.h  Hdf5Handle.cpp  Hdf5Handle.h  MathLib.cpp  MathLib.h  README.md  UT_Atl06Dispatch.cpp  UT_Atl06Dispatch.h  UT_MathLib.cpp  UT_MathLib.h  atl06.lua  iceplot.py  icesat2.cpp  icesat2.h  icesat2.md  jupyter.ipynb  lua_parms.cpp  (+5 more)
plugins/landsat/: CMakeLists.txt  landsat.md
plugins/opendata/: CMakeLists.txt
plugins/pgc/: CMakeLists.txt
plugins/pistache/: CMakeLists.txt  LuaClient.cpp  LuaClient.h  LuaEndpoint.cpp  RouteHandler.h  pistache.cpp  pistache.h
plugins/sigview/: AdasSocketReader.cpp  AdasSocketReader.h  AltimetryHistogram.cpp  AltimetryHistogram.h  AltimetryProcessorModule.cpp  AltimetryProcessorModule.h  AtlasFileWriter.cpp  AtlasFileWriter.h  AtlasHistogram.cpp  AtlasHistogram.h  BceHistogram.cpp  BceHistogram.h  BceProcessorModule.cpp  BceProcessorModule.h  BlinkProcessorModule.cpp  BlinkProcessorModule.h  CMakeLists.txt  CmdEchoProcessorModule.cpp  DSP.cpp  DSP.h  DatasrvSocketReader.cpp  DatasrvSocketReader.h  DiagLogProcessorModule.h  HstvsSimulator.cpp  ItosRecord.cpp  ItosRecord.h  ItosRecordParser.cpp  LaserProcessorModule.cpp  MajorFrameProcessorModule.cpp  MajorFrameProcessorModule.h  ReportProcessorStatistic.cpp  ReportProcessorStatistic.h  TimeProcessorModule.cpp  TimeProcessorModule.h  TimeTagHistogram.cpp  TimeTagHistogram.h  TimeTagProcessorModule.cpp  TimeTagProcessorModule.h  TxTimeProcessor.cpp  TxTimeProcessor.h  (+2 more)
plugins/swot/: CMakeLists.txt  README.md
plugins/usgs3dep/: CMakeLists.txt
scripts/: CMakeLists.txt  download_h5_granules.py  enumerate_h5_fields.py  generate_columns.py  parse_nsidc_data_dicts.py  test_schema.sh  validate_schema.py
scripts/apps/: extract_h5_dataset.lua  server.lua  test_runner.lua
scripts/client/: sliderule.py
scripts/endpoint/: atl06.lua  definition.lua  example_source_endpoint.lua  h5.lua
scripts/endpoints/: cre.lua  defaults.lua  event.lua  example_engine_endpoint.lua  geo.lua  h5.lua  h5p.lua  health.lua  index.lua  log.lua  lscre.lua  metric.lua  prometheus.lua  samples.lua  subsets.lua  tail.lua  tiff.lua  time.lua  version.lua
scripts/extensions/: asset.lua  base64.lua  console.lua  container_runtime.lua  csv.lua  dataframe.lua  earth_data_auth.lua  earth_data_query.lua  georesource.lua  global.lua  iam_role_auth.lua  packet.lua  prettyprint.lua  proxy.lua  service_registry.lua  test_executive.lua
scripts/memtests/: sliderule_memtest.sh
scripts/python/: README.md  Run_SlideRule_API.ipynb  environment.yml  requirements.txt  setup.py
scripts/selftests/: arcticdem_mini.tif  asset_directory.csv  asset_index.lua  asset_loaddir.lua  atl06_10rows.parquet  ccsds_packetizer.lua  cfs_interface.lua  cluster_socket.lua  credential_store.lua  default_parms_tojson.lua  dfio.lua  dictionary.lua  earth_data.lua  event_metric.lua  example_engine_endpoint.lua  field.lua  geojson_raster.lua  geouser_raster.lua  h5coro.lua  h5coro_dense_t1.lua  h5coro_dense_t2.lua  h5coro_dense_t3.lua  h5coro_old.lua  hdf5_file.lua  http_client.lua  http_faults.lua  http_rqst.lua  http_server.lua  limit_dispatch.lua  list.lua  lua_script.lua  message_queue.lua  monitor.lua  multicast_device_writer.lua  naming_objects.lua  ordering.lua  parms_tojson.lua  parquet_sampler.lua  pistache_endpoint.lua  record_dispatcher.lua  (+8 more)
scripts/systests/: auth_request.py  coro.py  geojson_raster_perf.lua  h5coro_dense_t1.lua  h5coro_dense_t2.lua  h5coro_dense_t3.lua  memtest.sh  memtest.supp  orchestrator.lua  parquet_sampler_3dep_perf_test.lua  parquet_sampler_arcticdem_perf_test.lua  parquet_sampler_landsat_perf_test.lua  parquet_sampler_perf_test.lua  pixels_vrt_1GB_test.lua  provisioning_system.lua  provisioning_system.py  pybinding_gedi.py  service_discovery.lua  service_discovery.py  subset_perf_test.lua  subset_vrt_very_large_aoi_test.lua
scripts/test/: atl06_elements.lua  ccsds_packetizer.lua  cfs_interface.lua  cluster_socket.lua  dictionary.lua  hdf5_file.lua  limit_dispatch.lua  mathlib.lua  pistache_endpoint.lua  record_dispatcher.lua  (+2 more)
(+2041 files in other folders)
